<resources>
	<string name="app_name">Burn Fat 30 days - Home Workout</string>
	<string name="font_regular" translatable="false">fonts/sfprodisplay_regular.ttf</string>
	<string name="font_bold" translatable="false">fonts/sfpro_display_semibold.otf"</string>
	<string name="font_medium" translatable="false">fonts/sfpro_display_medium.otf"</string>
	<string name="font_light_1" translatable="false">fonts/helveticaneue.ttf"</string>
	<string name="font_light_2" translatable="false">fonts/poiretone_regular.ttf"</string>
	<string name="repeat_sun">Sun</string>
	<string name="repeat_sat">Sat</string>
	<string name="repeat_fri">Fri</string>
	<string name="repeat_thu">Thu</string>
	<string name="repeat_wed">Wed</string>
	<string name="repeat_tue">Tue</string>
	<string name="repeat_mon">Mon</string>
	<string name="level_beginner">Beginner</string>
	<string name="level_advanced">Advanced</string>
	<string name="level_intermediate">Medium</string>
	<string name="number_workouts">%d workouts</string>
	<string name="workouts_total">Workouts</string>
	<string name="introduce">Introduce</string>
	<string name="title_introduce">All the radio you need in one app</string>
	<string name="detail_title_introduce">Enjoy even more than 100+ popular channels in this app: VOV, BBC, talkSPORT, BBC Radio 1Xtra, Classic FM, All Things Considered, Delilah,... News: Stay up-to-date on the latest news from local, national, and international sources, including Radio Emigranti, Nehanda Radio, BBC Radio, CBLA-FM, CBC Radio One Toronto live,...</string>
	<string name="detail_introduce">ENJOY YOUR RADIO ANYTIME, ANYWHERE Free radio app is a simple radio app that includes everything you need, including live news, sports, music, podcasts, and your favorite radio stations worldwide.</string>
	<string name="title_history_fullbody">Full body 1 - %s</string>
	<string name="title_history_fullbody_2">Full body 2 - %s</string>
	<string name="title_history_fullbody_3">Full body 3 - %s</string>
	<string name="title_history_unknown">Unknown</string>
	<string name="default_reminder_warm_up">Start when you wake up</string>
	<string name="default_reminder_sleepy">Relax before sleeping</string>
	<string name="challange_days_left">%d Days left</string>
	<string name="progress">Progress</string>
	<string name="sunday">Sunday</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="day">Day</string>
	<string name="days">Days</string>
	<string name="workouts">workouts</string>
	<string name="calories">Calories</string>
	<string name="kcal" translatable="false">Kcal</string>
	<string name="week_goal">Weekly Goals</string>
	<string name="full_body">Full body</string>
	<string name="each_side">Each Side</string>
	<string name="confirm_delete">Confirm delete?</string>
	<string name="cancel">Cancel</string>
	<string name="agree">Agree</string>
	<string name="ok">OK</string>
	<string name="send">Send</string>
	<string name="add_name">Add name</string>
	<string name="tips">Tips</string>
	<string name="reminder">Reminder</string>
	<string name="replace">Replace</string>
	<string name="set_duration_rest">(5 ~ 180 secs)</string>
	<string name="set_duration_countdown">(10 ~ 30 secs)</string>
	<string name="under_weight">Underweight</string>
	<string name="normal_weight">Normal weight</string>
	<string name="over_weight">Overweight</string>
	<string name="obesity">Obesity</string>
	<string name="ready_to_to_start_with">Ready to go. Start with</string>
	<string name="seconds">seconds</string>
	<string name="take_a_rest_next">Take a rest. Next.</string>
	<string name="start">Start</string>
	<string name="this_language_not_support">This language is not supported!</string>
	<string name="did_you_hear_the_test_voice">Have you hear the voice test yet?</string>
	<string name="please_choose_voide_engine">Please choose guide voice engine:</string>
	<string name="please_choose_language_voice_engine">Please choose guide voice engine:</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="default_string">Default</string>
	<string name="favorite">Favorite</string>
	<string name="routines_tab">Habit</string>
	<string name="title_notify">Female Fitness - Women Workout</string>
	<string name="content_notify">Its time for Female Fitness - Women Workout, let\'s start</string>
	<string name="snooze">Snooze</string>
	<string name="start_notify">Start</string>
	<string name="title_7_4_challange">7x4 Challenge</string>
	<string name="challange_go">GO!</string>
	<string name="week_1">Week 1</string>
	<string name="week_2">Week 2</string>
	<string name="week_3">Week 3</string>
	<string name="week_4">Week 4</string>
	<string name="title_edit_plan">Edit plan</string>
	<string name="btn_save">Save</string>
	<string name="title_guide">What your trouble zone?</string>
	<string name="btn_next">Next</string>
	<string name="title_set_week_goal">Set your weekly goal</string>
	<string name="content_set_week_goal">We recommend training at least 3 days weekly for a better result.</string>
	<string name="weekly_train_day">Weekly training days</string>
	<string name="first_day_of_week">First day of week</string>
	<string name="title_set_reminder">Set Reminder</string>
	<string name="content_set_reminder">Achievement comes with discipline</string>
	<string name="btn_finished">Finished</string>
	<string name="title_history">History</string>
	<string name="title_profile">Profile</string>
	<string name="units">Unit</string>
	<string name="weight">Weight</string>
	<string name="height">Height</string>
	<string name="year_of_birth">Year of Birth</string>
	<string name="title_reminder">Reminder</string>
	<string name="title_replace_exercise">Replace exercise</string>
	<string name="current">Current</string>
	<string name="you_rock">Workout\n completed</string>
	<string name="exercises">Exercises</string>
	<string name="minutes">Minutes</string>
	<string name="btn_do_again">Do it again</string>
	<string name="btn_share">Share</string>
	<string name="btn_share_with_friend">Share with friends</string>
	<string name="btn_start">Start</string>
	<string name="title_set_your_weekly_goal">Weekly goal setting</string>
	<string name="video">Video</string>
	<string name="animation">Animation</string>
	<string name="btn_set">Set</string>
	<string name="btn_reset">Reset</string>
	<string name="repeat">Repeat</string>
	<string name="secs">secs</string>
	<string name="title_sound_option">Sound options</string>
	<string name="mute">Mute</string>
	<string name="voice_guide">Voice guide</string>
	<string name="coach_tips">Coach Advice</string>
	<string name="content_warming_engine">The TSS engine you are using is not working now, please double check it, switch to another TTS engine, or download TTS voice language.</string>
	<string name="btn_down_tts_engine">Download TTS Engine</string>
	<string name="btn_select_tts_engine">Select TTS Engine</string>
	<string name="txt_empty_favorite">Your favorite workouts will be shown here.</string>
	<string name="btn_start_workout">Start your\nworkout</string>
	<string name="current_text">Current</string>
	<string name="edit">Edit</string>
	<string name="title_chart_calories">Calories burned, estimated (Kcal)</string>
	<string name="number">Number</string>
	<string name="content_dialog_quit">If you get tired , take a break, but don\'t quit!</string>
	<string name="btn_quit">Quit</string>
	<string name="btn_continue">Continue</string>
	<string name="title_report">Statistical</string>
	<string name="title_settings">Setting</string>
	<string name="settings_profile">My Profile</string>
	<string name="settings_reminder">Reminder</string>
	<string name="title_workout">Workout</string>
	<string name="settings_rest_set">Set a break time</string>
	<string name="settings_coundown">Countdown Time</string>
	<string name="settings_sound">Sound</string>
	<string name="title_voice_option">Voice selection</string>
	<string name="settings_test_voice">Voice Test</string>
	<string name="settings_select_tts_engine">Select TSS Engine</string>
	<string name="settings_download_tts_engine">Download TTS Engine</string>
	<string name="settings_voice_language">Spoken Language</string>
	<string name="settings_down_more_tts_language">Download more TTS language data</string>
	<string name="settings_device_tts">Device TTS Setting</string>
	<string name="title_general">General</string>
	<string name="title_advance">Advance</string>
	<string name="settings_language">Language</string>
	<string name="settings_walk">Walk</string>
	<string name="settings_gym_location">Gym Location</string>
	<string name="settings_share">Share with friends</string>
	<string name="title_support">Support</string>
	<string name="settings_ratings">Review</string>
	<string name="settings_feedback">Feedback</string>
	<string name="settings_help">Help</string>
	<string name="settings_policy">Privacy policy</string>
	<string name="last_30_days">Last 30 days</string>
	<string name="guide_add_favorite">Click ❤️ to add workouts to the Training page.</string>
	<string name="ready_to_go">Ready to go</string>
	<string name="take_a_rest">Take a rest</string>
	<string name="next">Next</string>
	<string name="menu_reset">Reset</string>
	<string name="title_languages_dialog">Languages</string>
	<string name="training_tab">Home</string>
	<string name="workouts_tab">Practice</string>
	<string name="report_tab">Statistical</string>
	<string name="setting_tab">More</string>
	<string name="come_back_in_30_mins" translatable="false">Come back in 30 minutes</string>
	<string-array name="language_display" translatable="false">
		<item>English</item>
		
		
		
		
		
		<item>Vietnamese</item>
	</string-array>
	<string-array name="language_value" translatable="false">
		<item>en</item>
		
		
		
		
		
		<item>vi</item>
	</string-array>
	<string name="abs_workout">Abs workout</string>
	<string name="butt_workout">Butt workout</string>
	<string name="arm_workout">Arm workout</string>
	<string name="thigh_workout">Thigh workout</string>
	<string name="routine">Routine</string>
	<string name="title_tips_activity" translatable="false">Tips</string>
	<string name="title_full_body_level_1">REDUCE BELLY FAT</string>
	<string name="description_full_body_level_1">Beginner</string>
	<string name="title_full_body_level_2">REDUCE BELLY FAT</string>
	<string name="description_full_body_level_2">Medium</string>
	<string name="title_full_body_level_3">REDUCE BELLY FAT</string>
	<string name="description_full_body_level_3">Advanced</string>
	<string name="my_training">MY TRANNING</string>
	<string name="title_my_training">Create the most suitable workouts according to your needs</string>
	<string name="add_exercise">Add Exercise</string>
	<string name="title_activity_add_exercise">Add Exercise</string>
	<string name="title_add_training">New Training</string>
	<string name="title_dialog_rename_training">Please name your plan</string>
	<string name="plan">Plan</string>
	<string name="menu_rename">Rename</string>
	<string name="menu_delete">Delete</string>
	<string name="string_hi">Hi</string>
	<string name="select_gender">Select Gender</string>
	<string name="female">Female</string>
	<string name="title_guide_level">Which plan do \nyou want to start with?</string>
	<string name="male">Male</string>
	<string name="btn_close">Close</string>
	<string name="btn_choose">Choose</string>
	<string name="btn_add_exercise">Add Exercise</string>
	<string name="title_activity_choose_plan">Select plans</string>
	<string name="chart_current">Current:</string>
	<string name="chart_maximum">Maximum:</string>
	<string name="btn_ok">OK</string>
	<string name="title_rest_day_activity">Rest day</string>
	<string name="desc_rest_day" translatable="false">Your body and muscles need to get some rest</string>
</resources>