<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="@dimen/padding_start">

        <androidx.appcompat.widget.AppCompatTextView
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/repeat"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_sun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/sunday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_mon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/monday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_tue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_wed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_fri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_sat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/saturday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/CheckBox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>