<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.nhn.fitness.ui.activities.RestDayActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:theme="@style/ToolbarDark"
		app:layout_constraintTop_toTopOf="parent"
		app:title="@string/title_rest_day_activity"
		app:titleTextColor="@color/white">

	</androidx.appcompat.widget.Toolbar>

	<androidx.appcompat.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:gravity="center"
		android:text="@string/desc_rest_day"
		android:textColor="@color/black"
		android:textSize="16sp"
		app:layout_constraintTop_toBottomOf="@id/img_image" />

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/img_image"
		android:layout_width="120dp"
		android:layout_height="120dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3"
		app:srcCompat="@drawable/ic_local_cafe" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/btn_ok"
		fontPath="@string/font_bold"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/bg_btn_border"
		android:text="@string/btn_ok"
		android:textColor="@color/white"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>