<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_start"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/padding_start"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_thumb"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/favorite_bg"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_start_workout"
                    fontPath="@string/font_bold"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_go"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_red_round"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/challange_go"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/txt_empty_favorite"
        android:textColor="#565656"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text=" ❤️ "
        android:textColor="#565656" />
</LinearLayout>